fix(header-actions): Fix header actions spacing

--- a/packages/recomponents/src/styles/helpers.scss
+++ b/packages/recomponents/src/styles/helpers.scss
@@ -54,6 +54,14 @@ $directions: (
     }
 }
 
+.r-ml-auto {
+    margin-left: auto !important;
+}
+
+.r-mr-auto {
+    margin-right: auto !important;
+}
+
 /**
  * Prevent scroll
  */
